fixed dark mode

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -831,6 +831,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -892,10 +897,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.font-extrabold {
-  font-weight: 800;
 }
 
 .capitalize {
@@ -982,75 +983,73 @@ video {
   opacity: 0.5;
 }
 
-@media (prefers-color-scheme: dark) {
-  .dark\:border-white {
-    --tw-border-opacity: 1;
-    border-color: rgb(255 255 255 / var(--tw-border-opacity));
-  }
+.dark .dark\:border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 
-  .dark\:bg-bg-secondary {
-    --tw-bg-opacity: 1;
-    background-color: rgb(40 37 53 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 37 53 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-btn-blue {
-    --tw-bg-opacity: 1;
-    background-color: rgb(56 56 143 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-btn-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 56 143 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-green-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-light-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(24 23 23 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-light-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 23 23 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-light-grey {
-    --tw-bg-opacity: 1;
-    background-color: rgb(58 58 58 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-light-grey {
+  --tw-bg-opacity: 1;
+  background-color: rgb(58 58 58 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-primary {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-secondary {
-    --tw-bg-opacity: 1;
-    background-color: rgb(40 44 52 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 44 52 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
+.dark .dark\:bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 
-  .dark\:bg-opacity-30 {
-    --tw-bg-opacity: 0.3;
-  }
+.dark .dark\:bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
+}
 
-  .dark\:text-black {
-    --tw-text-opacity: 1;
-    color: rgb(0 0 0 / var(--tw-text-opacity));
-  }
+.dark .dark\:text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
 
-  .dark\:text-primary {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
+.dark .dark\:text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 
-  .dark\:text-secondary {
-    --tw-text-opacity: 1;
-    color: rgb(40 44 52 / var(--tw-text-opacity));
-  }
+.dark .dark\:text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(40 44 52 / var(--tw-text-opacity));
+}
 
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
+.dark .dark\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
